Fixed Offset H-align
Turned out it was just a case of the scroll bar showing on one page and not the others. Set it to show automatically on all pages to present a clean website experience.

--- a/CIS111_Final/style.css
+++ b/CIS111_Final/style.css
@@ -18,6 +18,8 @@ body{
   /* Testing new Styles */
   background-image: url("images/body-bg.jpg");
   background-attachment: fixed;
+  overflow-y: scroll;
+  /*Setting overflow-y always visible, would cause wierd bump switching between pages.*/
 }
 
 figcaption{
